refactor: decouple ore and indicator generation